--- a/app/blog/3-ui-ux-improvements-for-the-bitcoin-company-and-how-to-implement-them/page.mdx
+++ b/app/blog/3-ui-ux-improvements-for-the-bitcoin-company-and-how-to-implement-them/page.mdx
@@ -86,4 +86,4 @@ Since The Bitcoin Company web application is using Tailwind CSS, I would like to
 
 ---
 
-While The Bitcoin Company's primary focus is on their mobile application, I believe these straightforward UI/UX improvements to the web application could provide additional value and enhance the overall user experience across platforms.
+While The Bitcoin Company's primary focus is on their mobile application, I believe these straightforward UI/UX improvements to the web application could provide additional value and enhance the overall user experience of the platform.
